# meridian-assistant

./: .env.example  .gitattributes  .gitignore  ASSUMPTIONS.md  CLAUDE.md  DESIGN_EVOLUTION.md  Makefile  PLAN.md  README.md  RUNBOOK.md  pyproject.toml
app/: __init__.py  auth.py  fixtures.py  main.py  schemas.py  seed.py  service.py  store.py
data/: branches.yaml  policy.yaml
data/corpus/: branch_hours.md  cancellation_policy.md  electrical_pricing.md  faq_booking.md  faq_emergencies.md  faq_payments.md  hvac_pricing.md  plumbing_pricing.md  service_area_central.md  service_area_north.md  warranty_terms.md
data/extracted/: coverage.json  fees.json  manifest.json
data/fixtures/: technicians.yaml
data/index/: chunks.jsonl  dense.npy  manifest.json
data/llm_cache/: text_0230e324f96b49063119c1ac33b9032eb503a74b8070f0bb91329b4b8a35ce8b.json  text_02e17aa4a26369f7c0eaab17159887bf8aaf6e436ddc4f9900247d53b53eac00.json  text_06654c5d9bdb4d99a16ed27c08cec8121f8174ea8695bc62631c144c2224cd80.json  text_067b074a821591570bde7691152c3841968a6b8a2b9334ade34974f46ddc4aa7.json  text_0c6006513c4f387a6fce9c28508bf0e910fff77c029a40145d204a7173b63dfc.json  text_100100081366c96f325033a5aa05cb4cbf2bb990ee7721c0ba033901228957df.json  text_11c90f72da847c59168ea7f1d28e020cca34f9c8fdb13ab9c9d698da1fd5f54b.json  text_12cdfc6811a9d1d93e55e96d31a42ae16d948c1b388db9f13eb25b81d7a6388f.json  text_146c7fb86cedb8ea0ffff142df09cd784886553a270af1ec17a02d0702dbde24.json  text_152670c1f933dfbb5f256588e6bfa5cc291c18efcfb2163de656dd415c84eaf4.json  text_1b22ff2d8536206c401de109f95c47100f192ee2ada575aafffc560b2eeca25e.json  text_1bc5ac512a05b5b1490bc12b997f188f69d20c1e233d2fbe5ec6e796ccb0116f.json  text_1e295b263374975c895cc55858165789ff4da042d796a21299758f814777aa8b.json  text_201b58c1e7abace5876d71c16aad42d33243a28f3fc1e1766242c642ed820708.json  text_22b6fe7d165b839325f31daa1a96d7b8008ae6e2a81a6429a58af37a820e1557.json  text_2364c0bf40274481e2acea6a7e71472e11b69b924db3f5efffc60277de604aea.json  (+63 more)
docs/: architecture.html  demo_transcript.txt  path_to_production.md
eval/: __init__.py  results.md
scripts/: show_retrieval.py
server/: __init__.py  app.py
tests/: conftest.py  test_eval.py  test_smoke.py
web/: app.js  index.html  style.css
(+84 files in other folders)
